--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,6 +13,9 @@
     <title>Zoom Clone JS</title>
 </head>
 <body>
+    <header id="title">
+        Video Chat
+    </header>
     <div id="video-grid"></div>
 </body>
 </html>
