--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,21 @@
     grid-auto-rows: 300px;
 }
 
+header {
+    margin: 0 auto;
+    padding: 15px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #5269f0;
+    color: #ffffff;
+    font-size: 32px;
+    font-weight: 500;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
 video {
     width: 100%;
     height:100%;
